omnic/errors.txt
cargo.exe :     
Checking omnic 
v0.1.0 (C:\Users\jua
nc\OneDrive\Document
s\GitHub\crom-omni\o
mnic)
No linha:1 
caractere:1
+ & "$env:USERPROFIL
E\.cargo\bin\cargo.e
xe" check 2>&1 | 
Out-File -File ...
+ ~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~
    + CategoryInfo  
            : NotS  
  pecified: (       
 Checking om...r    
om-omni\omnic):    
String) [], Rem    
oteException
    + FullyQualifie 
   dErrorId : Nati  
  veCommandError
 
error[E0433]: 
failed to resolve: 
could not find 
`unix` in `os`
 --> src\core\packag
er.rs:6:14
  |
6 | use std::os::uni
x::fs::PermissionsEx
t; // Para chmod 
(ignorável no 
Windows, mas boa 
prática)
  |              
^^^^ could not find 
`unix` in `os`
  |
note: found an item 
that was configured 
out
 --> /rustc/ded5c06c
f21d2b93bffd5d884aa6
e96934ee4234\library
\std\src\os\mod.rs:2
9:5
  |
  = note: the item 
is gated here
note: found an item 
that was configured 
out
 --> /rustc/ded5c06c
f21d2b93bffd5d884aa6
e96934ee4234\library
\std\src\os\mod.rs:8
4:41
  |
  = note: the item 
is gated here

warning: unused 
import: `LexerError`
 --> src\core\parser
.rs:3:33
  |
3 | use crate::core:
:lexer::{Lexer, 
LexerError};
  |                 
                
^^^^^^^^^^
  |
  = note: `#[warn(un
used_imports)]` 
(part of 
`#[warn(unused)]`) 
on by default

warning: unused 
import: `Read`
 --> src\core\packag
er.rs:2:22
  |
2 | use 
std::io::{Write, 
Read, Seek};
  |                 
     ^^^^

error[E0599]: no 
variant or 
associated item 
named `While` found 
for enum `Token` in 
the current scope
   --> src\core\pars
er.rs:224:20
    |
224 |             
Token::While => 
self.parse_while(),
    |               
     ^^^^^ variant 
or associated item 
not found in `Token`
    |
   ::: src\core\toke
n.rs:10:1
    |
 10 | pub enum 
Token {
    | 
-------------- 
variant or 
associated item 
`While` not found 
for this enum

error[E0599]: no 
variant or 
associated item 
named `For` found 
for enum `Token` in 
the current scope
   --> src\core\pars
er.rs:225:20
    |
225 |             
Token::For => 
self.parse_for(),
    |               
     ^^^ variant or 
associated item not 
found in `Token`
    |
   ::: src\core\toke
n.rs:10:1
    |
 10 | pub enum 
Token {
    | 
-------------- 
variant or 
associated item 
`For` not found for 
this enum

error[E0599]: no 
variant or 
associated item 
named `Break` found 
for enum `Token` in 
the current scope
   --> src\core\pars
er.rs:227:20
    |
227 |             
Token::Break => {
    |               
     ^^^^^ variant 
or associated item 
not found in `Token`
    |
   ::: src\core\toke
n.rs:10:1
    |
 10 | pub enum 
Token {
    | 
-------------- 
variant or 
associated item 
`Break` not found 
for this enum

error[E0599]: no 
variant or 
associated item 
named `Continue` 
found for enum 
`Token` in the 
current scope
   --> src\core\pars
er.rs:232:20
    |
232 |             
Token::Continue => {
    |               
     ^^^^^^^^ 
variant or 
associated item not 
found in `Token`
    |
   ::: src\core\toke
n.rs:10:1
    |
 10 | pub enum 
Token {
    | 
-------------- 
variant or 
associated item 
`Continue` not 
found for this enum

error[E0599]: no 
variant or 
associated item 
named `While` found 
for enum `Token` in 
the current scope
   --> src\core\pars
er.rs:362:28
    |
362 |         self.e
xpect(Token::While)?
;
    |               
             ^^^^^ 
variant or 
associated item not 
found in `Token`
    |
   ::: src\core\toke
n.rs:10:1
    |
 10 | pub enum 
Token {
    | 
-------------- 
variant or 
associated item 
`While` not found 
for this enum

error[E0599]: no 
variant or 
associated item 
named `For` found 
for enum `Token` in 
the current scope
   --> src\core\pars
er.rs:372:28
    |
372 |         self.e
xpect(Token::For)?;
    |               
             ^^^ 
variant or 
associated item not 
found in `Token`
    |
   ::: src\core\toke
n.rs:10:1
    |
 10 | pub enum 
Token {
    | 
-------------- 
variant or 
associated item 
`For` not found for 
this enum

error[E0599]: no 
variant or 
associated item 
named `In` found 
for enum `Token` in 
the current scope
   --> src\core\pars
er.rs:375:28
    |
375 |         self.e
xpect(Token::In)?;
    |               
             ^^ 
variant or 
associated item not 
found in `Token`
    |
   ::: src\core\toke
n.rs:10:1
    |
 10 | pub enum 
Token {
    | 
-------------- 
variant or 
associated item 
`In` not found for 
this enum
    |
help: there is a 
variant with a 
similar name
    |
375 -         self.e
xpect(Token::In)?;
375 +         self.e
xpect(Token::Fn)?;
    |

error[E0004]: 
non-exhaustive 
patterns: `&ast::Sta
tement::NativeBlock 
{ .. }` not covered
   --> src\targets\p
ython.rs:122:15
    |
122 |         match 
stmt {
    |               
^^^^ pattern `&ast::
Statement::NativeBlo
ck { .. }` not 
covered
    |
note: 
`ast::Statement` 
defined here
   --> src\core\ast.
rs:81:10
    |
 81 | pub enum 
Statement {
    |          
^^^^^^^^^
...
119 |     
NativeBlock {
    |     
----------- not 
covered
    = note: the 
matched value is of 
type 
`&ast::Statement`
help: ensure that 
all possible cases 
are being handled 
by adding a match 
arm with a wildcard 
pattern or an 
explicit pattern as 
shown
    |
168 ~             },
169 +             &a
st::Statement::Nativ
eBlock { .. } => 
todo!()
    |

warning: unused 
variable: 
`debug_tokens`
   --> 
src\main.rs:142:5
    |
142 |     
debug_tokens: bool, 
    |     
^^^^^^^^^^^^ help: 
if this is 
intentional, prefix 
it with an 
underscore: 
`_debug_tokens`
    |
    = note: `#[warn(
unused_variables)]` 
(part of 
`#[warn(unused)]`) 
on by default

Some errors have 
detailed 
explanations: 
E0004, E0433, E0599.
For more 
information about 
an error, try 
`rustc --explain 
E0004`.
warning: `omnic` 
(bin "omnic") 
generated 3 warnings
error: could not 
compile `omnic` 
(bin "omnic") due 
to 9 previous 
errors; 3 warnings 
emitted
